--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "author": "Nic Barker",
   "license": "MIT",
   "scripts": {
-    "start-webpack": "node_modules/.bin/webpack --config webpack-config/common/webpack.common.dev.js --watch --watch-poll 1000",
+    "start-webpack": "node_modules/.bin/webpack-dev-server --config webpack-config/common/webpack.common.dev.js",
     "dist": "NODE_ENV=production node_modules/.bin/parallel-webpack --config webpack-config/common/webpack.common.production.js",
     "dist-analyze": "NODE_ENV=production node_modules/.bin/parallel-webpack --config webpack-config/common/webpack.common.analyze.js"
   },
