Initial draft of nodes navigable by keyboard

--- a/frontend/common/tsconfig.json
+++ b/frontend/common/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../tsconfig.json",
     "include": [
       "application-web.tsx",
-      "./**/*.ts"
+      "./**/*.ts",
+      "./**/*.tsx"
     ],
     "compilerOptions": {
       "module": "commonjs",
