--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@sentry/browser": "^4.0.0-rc.2",
+    "classnames": "^2.2.6",
     "color": "^3.1.0",
     "humanize-duration": "^3.15.3",
     "luxon": "^1.3.3",
@@ -37,6 +38,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/classnames": "^2.2.9",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
