--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@types/classnames": "^2.2.9",
+    "@types/color": "^3.0.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
@@ -48,7 +49,7 @@
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.5.2",
     "eslint": "^6.1.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.14.3",
     "html-webpack-plugin": "^3.2.0",
     "ionicons": "^4.5.5",
     "terser-webpack-plugin": "^1.2.1",
