--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "@sentry/browser": "^4.0.0-rc.2",
+    "@sentry/browser": "^5.5.0",
     "classnames": "^2.2.6",
     "color": "^3.1.0",
     "humanize-duration": "^3.15.3",
