--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@sentry/browser": "^5.5.0",
     "classnames": "^2.2.6",
     "color": "^3.1.0",
+    "draft-js": "^0.11.0",
     "humanize-duration": "^3.15.3",
     "luxon": "^1.3.3",
     "query-string": "^6.2.0",
