--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@sentry/browser": "^5.5.0",
     "classnames": "^2.2.6",
     "color": "^3.1.0",
-    "draft-js": "^0.11.0",
     "humanize-duration": "^3.15.3",
     "luxon": "^1.3.3",
     "query-string": "^6.2.0",
@@ -41,6 +40,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/classnames": "^2.2.9",
     "@types/color": "^3.0.0",
+    "@types/draft-js": "^0.10.34",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
