--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "query-string": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-flip-toolkit": "^6.6.9",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
