--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "raw.macro": "^0.4.2"
   }
 }
